--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>手機算命網</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
-    <div id="containe">
+    <div id="container">
         <div class="title">
             手機號碼吉凶占卜
         </div>
@@ -19,14 +20,15 @@
         <p>
             手機號碼一跟10年，<span class="text-1">號碼選得好，人生沒煩惱!!</span>
         </p>
-        <h3>請輸入您的手機號碼</h3>
+        <h2>請輸入您的手機號碼</h2>
         <div id="form">
             <label for="phone">號碼:</label>
             <input type="text" id="phone-number">
-            <input type="button" id="analytics" value="測算">
+
             <div id="result">
                 吉
             </div>
+            <input type="button" id="analytics" value="測算">
             <div id="result-text">Lorem ipsum dolor</div>
         </div>
 
