取得輸入號碼

--- a/index.html
+++ b/index.html
@@ -28,13 +28,14 @@
             <div id="result">
                 吉
             </div>
-            <input type="button" id="analytics" value="測算">
+            <input type="button" id="analytics" value="測算" onclick="analytics()">
             <div id="result-text">Lorem ipsum dolor</div>
         </div>
 
         <footer>&copy;created by HaopingChen v0.1</footer>
 
     </div>
+    <script src="./js/index.js"></script>
 </body>
 
 </html>
