完成基本邏輯

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h2>請輸入您的手機號碼</h2>
         <div id="form">
             <label for="phone">號碼:</label>
-            <input type="text" id="phone-number">
+            <input type="text" id="phone-number" maxlength="10">
 
             <div id="result">
                 吉
