完成閃爍動畫

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 占
             </div>
             <input type="button" id="analytics" value="測算" onclick="analytics()">
-            <div id="result-text">Lorem ipsum dolor</div>
+            <div id="result-text">評語</div>
         </div>
 
         <footer>&copy;created by HaopingChen v0.1</footer>
